--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600&family=Permanent+Marker&display=swap"
   rel="stylesheet">
+  <link rel="shortcut icon" type="image/svg" href=”favicon.ico” />
     <title>React App</title>
 
     <!-- Start Single Page Apps for GitHub Pages -->
